<resources>
    <string name="app_name">PizzeriaDomMortandello</string>
    <string name="register_pizza">Pizza Registers</string>
    <string name="promotions">Promotions</string>
    <string name="menu_pizza">Menu</string>
    <string name="image_home">Image Home</string>
    <string name="pizza_name">Pizza Name</string>
    <string name="price">Price</string>
    <string name="ingredients">Ingredients</string>
    <string name="placeholder_name">Enter the pizza name</string>
    <string name="save">Save</string>
    <string name="ok" translatable="false">OK</string>
    <string name="pizza_info">Pizza Info...</string>
    <string name="close">Close</string>
    <string name="promotion">Promotion</string>
    <string name="discount">Discount</string>
    <string name="pizzas">Pizzas</string>
</resources>