<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtLabelPromotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/promotion"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/txtPromotionNameInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Promo01"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtLabelDiscountInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discount"
            android:textSize="34sp"/>

        <TextView
            android:id="@+id/txtPromotionDiscountInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="17%"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtLabelPizzasDiscountInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pizzas"
            android:textSize="34sp" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fcvPizzasDiscountInfo"
            android:name="com.example.pizzeriadommortandello.ui.fragments.pizzas.ListPizzasFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtTotalPriceDiscountInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/price_area_menu_item_view"
            android:gravity="center"
            android:text="R$98,70"
            android:textSize="34sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>